--- a/src/SimpleForm.html
+++ b/src/SimpleForm.html
@@ -6,7 +6,7 @@
     <title>Order form</title>
 </head>
 <body>
-    <form method="post" action="SimpleFormSubmit.html">
+    <form method="post">
         <h1>Order Form</h1>
         <p>What would you like to buy?</p>
         <label>
