--- a/src/SimpleTable.html
+++ b/src/SimpleTable.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/SimpleTable.css">
-    <title>Title</title>
+    <title>Simple table</title>
 </head>
 <body>
     <table>
